example/www/middleware/stuff/errors/oops.rt.js
module.exports = {
    GET(){throw new Error("Successfully Failed")}
}